--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@
     background-color: #4E47FF;
     border-radius: 10px;
     border: none;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: #c33ba3;
+    transition: all 1s ease-in-out;
 }
 
 #header{
@@ -40,4 +46,16 @@ nav ul li a {
     color: #4E47FF;
     font-size: 34px;
     font-weight: 600;
+}
+
+.banner{
+    margin: 0 auto;
+    width: 50%;
+    padding: 90px 0
+}
+
+.banner-head{
+    font-weight: bold;
+    /* font-size: 65px; */
+    margin-bottom: 30px;
 }
