--- a/style.css
+++ b/style.css
@@ -181,3 +181,29 @@ margin: 10px 0;
 }
 
 /* BABABA */
+
+.contact-us{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+justify-content: space-evenly;
+align-items: center;}
+
+.getintouch{
+    font-weight: 700;
+    font-size: 32px;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+
+form label{
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+form input, form textarea{
+    padding: 20px 30px;
+margin-bottom: 20px;}
