--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ nav ul li a {
 .banner{
     margin: 0 auto;
     width: 50%;
-    padding: 130px 0
+    padding: 130px 0;
+    text-align: center;
 }
 
 .banner-head{
